MAnipula arquivo